2023-10-22T16:21:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6604914569 # 888
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-22
* notice: last 14d: unq all: 3 39
* notice: prev accum: outdated-unq outdated-all / unq all: 262 552 / 279 590
* notice: next accum: outdated-unq outdated-all / unq all: 262 552 / 279 591
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-22]

2023-10-22T08:20:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6602654330 # 887
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-22
* notice: last 14d: unq all: 3 38
* notice: prev accum: outdated-unq outdated-all / unq all: 262 552 / 278 589
* notice: next accum: outdated-unq outdated-all / unq all: 262 552 / 279 590
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-22]

2023-10-22T01:21:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6600846783 # 886
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-22
* notice: last 14d: unq all: 3 37
* notice: prev accum: outdated-unq outdated-all / unq all: 262 552 / 278 588
* notice: next accum: outdated-unq outdated-all / unq all: 262 552 / 278 589
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2023-10-21]

2023-10-21T08:20:09Z: