@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-22T16:21:30Z",
-  "count_outdated" : 552,
-  "uniques_outdated" : 262,
+  "timestamp" : "2023-10-23T01:16:54Z",
+  "count_outdated" : 553,
+  "uniques_outdated" : 263,
   "count" : 591,
   "uniques" : 279,
   "clones" : [
-    {
-      "timestamp": "2023-10-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-09T00:00:00Z",
       "count": 2,
