@@ -1,3 +1,12 @@
+2023-10-23T01:16:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6607500201 # 889
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-23
+* notice: last 14d: unq all: 3 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 262 552 / 279 591
+* notice: next accum: outdated-unq outdated-all / unq all: 263 553 / 279 591
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-10-08] / []
+
 2023-10-22T16:21:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6604914569 # 888
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-22
